--- a/headerproyecto.html
+++ b/headerproyecto.html
@@ -66,7 +66,7 @@
           </div>
 
           <div class="footer_bottom">
-              <p>autopool - Todos los derechos reservados</p>
+              <p>autopool - Todos los derechos reservados.</p>
           </div>
 
       </footer>
