--- a/headerproyecto.html
+++ b/headerproyecto.html
@@ -18,7 +18,7 @@
               <li><a href="#">Mi Cuenta</a></li>
             </ul>
 
-            <img class="imagen" src="img/logo_autopool_hoja.png" alt="autopool">
+            <img class="imagen" src="img/logo_autopool_100x100.png" alt="autopool">
 
             <nav class="main-nav">
               <ul>
