Linkeo entre htmls

--- a/home.html
+++ b/home.html
@@ -17,20 +17,20 @@
         <header class="main-header">
 
           <ul class="login">
-            <li><a id="none" href="#">Registrarme</a></li>
-            <li><a href="#">Ingresar</a></li>
-            <li><a href="#">Mi Cuenta</a></li>
+            <li><a id="none" href="registro.html">Registrarme</a></li>
+            <li><a href="ingresar.html">Ingresar</a></li>
+            <li><a href="ingresar.html">Mi Cuenta</a></li>
           </ul>
 
           <img class="imagen" src="img/autopool_v2_w200.png" alt="autopool">
 
           <nav class="main-nav">
             <ul>
-              <li><a href="#">Qué es autopool</a></li>
-              <li><a href="#">Como funciona</a></li>
+              <li><a href="#anchor_content_2">Qué es autopool</a></li>
+              <li><a href="#anchor_content_3">Como funciona</a></li>
               <li><a href="#">Pasajeros</a></li>
               <li><a href="#">Conductores</a></li>
-              <li><a href="#">Preguntas Frecuentes</a></li>
+              <li><a href="#anchor_content_4">Preguntas Frecuentes</a></li>
             </ul>
           </nav>
         </header>
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="home_content_2">
+    <div class="home_content_2" id="anchor_content_2">
       <h1>Qué es autopool</h1>
       <p class="home_content_2_txt">¿Alguna vez pensaste en el tiempo y la energía que nos ahorraríamos si tuviésemos una forma eficiente de ir y venir desde nuestros hogares hacia el trabajo y viceversa? El transporte público todavía no es lo que debería. Los costos de tener un vehículo partciular parecen pensados más para su capacidad de 4 ocupantes que para 1 persona de uso urbano. Ni hablar del tiempo que requiere desplazarse en hora pico o el consumo de combustible. ¡Por todo esto es que nace autopool! Una plataforma que busca unir personas con y sin automóvil para que compartan trayectos, costos, y lo más importante, la compañía y la conversación.</p>
       <section class="home_benefits">
@@ -80,20 +80,20 @@
 
     </div>
 
-    <div class="home_content_3">
+    <div class="home_content_3" id="anchor_content_3">
       <h1>Cómo funciona</h1>
       <iframe width="853" height="480" src="https://www.youtube.com/embed/OiCRM2c4T84" frameborder="0" allowfullscreen></iframe>
       <!-- <video src="video/home_video.webm" width="800px" controls poster>
         <p>Lo sentimos pero la versión de su navegador no permite reproducir este formato de video.</p>
       </video> -->
       <p class="home_content_3_txt">¿Qué estás esperando para viajar de forma más inteligente?</p>
-      <button class="home_button" type="submit" name="registrarte">Registrate</button>
+      <button class="home_button" type="submit" name="registrarte"><a class="button_video_link" href="registro.html">Registrate</a></button>
     </div>
 
     <div class="espacio_vacio"> <!-- Eliminar cuando haya contenido central -->
     </div>
 
-    <div class="home_content_4">
+    <div class="home_content_4" id="anchor_content_4">
       <h1>Algunas preguntas frecuentes</h1>
       <p class="home_content_4_txt">Estas son algunas de las preguntas más comunes de nuestros usuarios:</p>
       <div class="home_content_4_faq">
