--- a/ingresar.html
+++ b/ingresar.html
@@ -17,20 +17,20 @@
         <header class="main-header">
 
           <ul class="login">
-            <li><a id="none" href="#">Registrarme</a></li>
+            <li><a href="registro.html">Registrarme</a></li>
             <li><a href="#">Ingresar</a></li>
             <li><a href="#">Mi Cuenta</a></li>
           </ul>
 
-          <img class="imagen" src="img/autopool_v2_w200.png" alt="autopool">
+          <a href="home.html"><img class="imagen" src="img/autopool_v2_w200.png" alt="autopool"></a>
 
           <nav class="main-nav">
             <ul>
-              <li><a href="#">Qué es autopool</a></li>
-              <li><a href="#">Como funciona</a></li>
+              <li><a href="home.html#anchor_content_2">Qué es autopool</a></li>
+              <li><a href="home.html#anchor_content_3">Como funciona</a></li>
               <li><a href="#">Pasajeros</a></li>
               <li><a href="#">Conductores</a></li>
-              <li><a href="#">Preguntas Frecuentes</a></li>
+              <li><a href="home.html#anchor_content_4">Preguntas Frecuentes</a></li>
             </ul>
           </nav>
         </header>
