--- a/ingresar.html
+++ b/ingresar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>autopool - Comparte tu viaje</title>
-    <link rel="stylesheet" href="css/estilos_login.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon"
       type="img/ico"
