--- a/ingresar.html
+++ b/ingresar.html
@@ -30,7 +30,7 @@
               <li><a href="home.html#anchor_content_3">Como funciona</a></li>
               <li><a href="#">Pasajeros</a></li>
               <li><a href="#">Conductores</a></li>
-              <li><a href="home.html#anchor_content_4">Preguntas Frecuentes</a></li>
+              <li><a href="faq.html">Preguntas Frecuentes</a></li>
             </ul>
           </nav>
         </header>
@@ -89,7 +89,7 @@
             <ul>
               <li><a href="#">Confianza y Seguridad</a></li>
               <li><a href="#">Calificación de los Usuarios</a></li>
-              <li><a href="#">Preguntas Frecuentes</a></li>
+              <li><a href="faq.html">Preguntas Frecuentes</a></li>
               <li><a href="#">Confianza y Seguridad</a></li>
             </ul>
           </div>
