--- a/faq.html
+++ b/faq.html
@@ -17,8 +17,8 @@
         <header class="main-header">
 
           <ul class="login">
-            <li><a href="registro.html">Registrarme</a></li>
-            <li><a href="#">Ingresar</a></li>
+            <li><a href="registro.php">Registrarme</a></li>
+            <li><a href="ingresar.html">Ingresar</a></li>
             <li><a href="#">Mi Cuenta</a></li>
           </ul>
 
