--- a/ingresar.html
+++ b/ingresar.html
@@ -17,7 +17,7 @@
         <header class="main-header">
 
           <ul class="login">
-            <li><a href="registro.html">Registrarme</a></li>
+            <li><a href="registro.php">Registrarme</a></li>
             <li><a href="#">Ingresar</a></li>
             <li><a href="#">Mi Cuenta</a></li>
           </ul>
@@ -65,7 +65,7 @@
           <a href="#" class="recuperar">Recuperar contraseña</a>
     		</div>
     	</div>
-      
+
     <div class="container_footer">
       <footer>
 
