--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <header class="main-header">
 
           <ul class="login">
-            <li><a id="none" href="registro.html">Registrarme</a></li>
+            <li><a id="none" href="registro.php">Registrarme</a></li>
             <li><a href="ingresar.html">Ingresar</a></li>
             <li><a href="ingresar.html">Mi Cuenta</a></li>
           </ul>
@@ -38,35 +38,41 @@
 
     <div class="home_content_1">
       <div class="home_main_image">
-        <img src="img/home_main_image_2.png" alt="Compartir viaje con autopool">
+        <div class="bg_text">
+          <h2>Un conductor, un pasajero, un auto menos en la calle ¡Llegó autopool!</h2>
+        </div>
+
       </div>
     </div>
 
     <div class="home_content_2" id="anchor_content_2">
-      <h1>Qué es autopool</h1>
-      <p class="home_content_2_txt">¿Alguna vez pensaste en el tiempo y la energía que nos ahorraríamos si tuviésemos una forma eficiente de ir y venir desde nuestros hogares hacia el trabajo y viceversa? El transporte público todavía no es lo que debería. Los costos de tener un vehículo partciular parecen pensados más para su capacidad de 4 ocupantes que para 1 persona de uso urbano. Ni hablar del tiempo que requiere desplazarse en hora pico o el consumo de combustible. ¡Por todo esto es que nace autopool! Una plataforma que busca unir personas con y sin automóvil para que compartan trayectos, costos, y lo más importante, la compañía y la conversación.</p>
+      <h2>Qué es autopool</h2>
+      <p>¿Alguna vez pensaste en el tiempo y la energía que nos ahorraríamos si tuviésemos una forma eficiente de ir y venir desde nuestros hogares hacia el trabajo y viceversa?</p>
+      <p> El transporte público todavía no es lo que debería. Los costos de tener un vehículo partciular parecen pensados más para su capacidad de 4 ocupantes que para 1 persona de uso urbano.</p>
+      <p>Ni hablar del tiempo que requiere desplazarse en hora pico o el consumo de combustible.</p>
+      <p>¡Por todo esto es que nace autopool! Una plataforma que busca unir personas con y sin automóvil para que compartan trayectos, costos, y lo más importante, la compañía y la conversación.</p>
       <section class="home_benefits">
         <div class="home_benefits_1">
           <img class="home_benef_img" src="img/home_benef_1_img.png" alt="Ayudarse los unos a los otros">
-          <div class="home_benefits_1_txt">
+          <div class="home_benefits_txt home_benefits_1_txt">
           Ayudarse los unos a los otros de manera organizada y segura.
           </div>
         </div>
         <div class="home_benefits_2">
           <img class="home_benef_img" src="img/home_benef_2_img.png" alt="Ahorrar juntos">
-          <div class="home_benefits_2_txt">
+          <div class="home_benefits_txt home_benefits_2_txt">
           Compartir con otros es ahorrar en tiempo y combustible.
           </div>
         </div>
         <div class="home_benefits_3">
           <img class="home_benef_img" src="img/home_benef_3_img.png" alt="Aprovechemos lo inevitable">
-          <div class="home_benefits_3_txt">
+          <div class="home_benefits_txt home_benefits_3_txt">
           Haremos el viaje de todas manera. ¿Por qué no aprovecharlo para sumar?
           </div>
         </div>
         <div class="home_benefits_4">
           <img class="home_benef_img" src="img/home_benef_4_img.png" alt="Menos autos es más aire puro">
-          <div class="home_benefits_4_txt">
+          <div class="home_benefits_txt home_benefits_4_txt">
           Menos vehículos en la calle son menos emisiones que contaminan y menos ruido.
           </div>
         </div>
@@ -75,7 +81,7 @@
     </div>
 
     <div class="home_content_3" id="anchor_content_3">
-      <h1>Cómo funciona</h1>
+      <h2>Cómo funciona</h2>
       <iframe width="853" height="480" src="https://www.youtube.com/embed/OiCRM2c4T84" frameborder="0" allowfullscreen></iframe>
       <!-- <video src="video/home_video.webm" width="800px" controls poster>
         <p>Lo sentimos pero la versión de su navegador no permite reproducir este formato de video.</p>
@@ -85,7 +91,7 @@
     </div>
 
     <div class="home_content_4" id="anchor_content_4">
-      <h1>Algunas preguntas frecuentes</h1>
+      <h2>Algunas preguntas frecuentes</h2>
       <p class="home_content_4_txt">Estas son algunas de las preguntas más comunes de nuestros usuarios:</p>
       <div class="home_content_4_faq">
           <section class="home_content_4_faq_1">
