--- a/header.html
+++ b/header.html
@@ -6,8 +6,8 @@
 
           <ul class="login">
             <li><a id="none" href="registro.php">Registrarme</a></li>
-            <li><a href="ingresar.html">Ingresar</a></li>
-            <li><a href="ingresar.html">Mi Cuenta</a></li>
+            <li><a href="ingresar.php">Ingresar</a></li>
+            <li><a href="ingresar.php">Mi Cuenta</a></li>
           </ul>
           <a href="home.php">
           <img class="imagen" src="img/autopool_v2_w200.png" alt="autopool">
