--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
               <li><a href="#anchor_content_3">Como funciona</a></li>
               <li><a href="#">Pasajeros</a></li>
               <li><a href="#">Conductores</a></li>
-              <li><a href="faq.html">Preguntas Frecuentes</a></li>
+              <li><a href="faq.php">Preguntas Frecuentes</a></li>
             </ul>
           </nav>
         </header>
